test: Ajustes de Testes Unitários - Inclusão e ajustes de testes unitários